cmake_minimum_required(VERSION 3.13)
project(Clion_CPPFoundation_Day06)

set(CMAKE_CXX_STANDARD 14)

add_executable(Clion_CPPFoundation_Day06 "01 关系运算符重载.cpp" "02 函数调用运算符重载.cpp" "04  继承的引出.cpp" "05 继承的方式.cpp" "06 继承中的对象模型.cpp" "07 继承中的构造和析构函数.cpp" "08 继承中的同名处理.cpp" "09 继承中静态成员的处理.cpp" "10 多继承的概念及问题.cpp" "11 菱形继承的概念及问题.cpp" "03 强化训练-字符串的封装.cpp" MyString.cpp MyString.h)